# sqlite3mc.dart

./: .gitignore  README.md  melos.yaml
.github/actions/build-examples/: action.yaml
.github/workflows/: publish.yaml
app/: .last_build_id  coi-serviceworker.js  file.worker.js  flutter_service_worker.js  index.html  main.dart.js  sqlite3mc.wasm  worker.dart.js  worker.dart.js.deps
app/assets/: NOTICES
examples/: README.md  index.html
examples/app/: .metadata  build.yaml  pubspec.yaml  pubspec_overrides.yaml
examples/app/android/app/: build.gradle
examples/app/ios/: Podfile
examples/app/ios/Runner.xcodeproj/: project.pbxproj
examples/app/lib/database/: database.dart  database.g.dart
examples/app/lib/database/connection/: native.dart  unsupported.dart  web.dart  worker.dart
examples/app/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
examples/app/test/generated_migrations/: schema_v1.dart
examples/app/web/: index.html  worker.dart.js.map
examples/app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
native_libs/sqlite3mc-android-native-lib/: .gitignore  build.gradle  settings.gradle.kts
native_libs/sqlite3mc-android-native-lib/gradle/wrapper/: gradle-wrapper.properties
native_libs/sqlite3mc-android-native-lib/sqlite3mc-native-library/: build.gradle.kts
native_libs/sqlite3mc-android-native-lib/sqlite3mc-native-library/cpp/: CMakeLists.txt
